# dyntrait-test

./: Cargo.toml  README.md
app/: Cargo.toml
app/src/: main.rs
base/: Cargo.toml
base/src/: lib.rs
ext/: Cargo.toml
ext/src/: lib.rs
test1/: Cargo.toml
test1/src/: lib.rs
test2/: Cargo.toml
test2/src/: lib.rs
test3/: Cargo.toml
test3/src/: lib.rs
