[package]
name = "test2"
version = "0.1.0"
authors = ["n-ari <fukunari.r.aa@m.titech.ac.jp>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
serde_json = "1.0.59"
base = { path = "../base" }
ext = { path = "../ext" }
